--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "local-storage": "^2.0.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.10.0",
